# pyignite

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: alpha-feedback.yml
.github/workflows/: publish.yml  python-package.yml
.kilocode/rules/memory-bank/: architecture.md  context.md  product.md  tech.md
benchmarks/: baseline.alpha.json
docs/: README.md  command-contract-v1.md  devloop-terminal-ux.md  fastapi-scaffold-template.md  release-alpha-checklist.md
docs/adr/: 0001-defer-v1-non-goals.md  0002-standalone-cli-delegated-packaging.md  0003-binary-distribution-strategy.md  README.md
docs/dev-loop/: README.md  incremental-checks.md  terminal-ux.md
docs/examples/: pyignite.toml
docs/getting-started/: README.md  install.md  quickstart-alpha.md  quickstart-cli.md  quickstart-lib.md  troubleshooting-alpha.md
docs/quality/: README.md  e2e-testing.md  perf-baseline-alpha.md  perf-benchmarks.md
docs/reference/: README.md  command-contract-v1.md  fastapi-scaffold-template.md  profile-template-contract-v2.md
docs/reference/examples/: pyquick.toml
docs/release/: README.md  alpha-feedback-template.md  binary-distribution-strategy.md  post-alpha-roadmap.md  pypi-publishing.md  release-alpha-checklist.md  releasing.md  triage-alpha-process.md
infra/ci/: github-actions-notes.md
infra/docker/: Dockerfile
scripts/: benchmark_compare.py  benchmark_devloop_checks.py  benchmark_runtime.py  prototype_binary_pyinstaller.sh  run_benchmarks.sh
src/anvil/: __init__.py  cli.py  config.py  dev.py  profiles.py  pyproject.py  run.py  tools.py
src/anvil/commands/: dev.py  run.py
src/flint/: config.py  devloop.py  tools.py
src/flint/commands/: new.py
src/flint/scaffold/: registry.py
src/flint/tooling/: adapters.py
src/pyignite/: config.py
src/pyignite/commands/: __init__.py  _common.py  check.py  dev.py  fmt.py  lint.py  run.py  test.py
src/pyignite/devloop/: __init__.py  incremental.py  orchestrator.py  renderer.py
src/pyignite/scaffold/: __init__.py  fastapi.py  names.py
src/pyignite/tooling/: __init__.py  adapters.py
src/pyqck/: __init__.py  config.py
src/pyqck/commands/: new.py  run.py
src/pyqck/devloop/: incremental.py
src/pyqck/scaffold/: __init__.py  catalog.py  cli_template.py  fastapi.py
tests/: __init__.py  helpers.py  test_cli.py  test_config.py  test_dev.py  test_e2e.py  test_e2e_sample.py  test_profiles.py  test_pyproject.py  test_run.py  test_tools.py
tests/e2e/: test_api_workflow_e2e.py  test_cli_workflow_e2e.py  test_new_command.py  test_profile_template_validation_e2e.py
tests/fixtures/fastapi_sample/: pyproject.toml
tests/fixtures/fastapi_sample/tests/: test_health.py
tests/unit/: test_cli_scaffold_template.py  test_command_wrappers.py  test_config.py  test_devloop_incremental.py  test_devloop_orchestrator.py  test_devloop_renderer.py  test_fastapi_scaffold_template.py  test_scaffold_registry.py  test_tooling_adapters.py
